--- a/development/index.html
+++ b/development/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Demo</title>
-        <link rel="stylesheet" href="node_modules/uikit/dist/css/uikit.min.css">
+        <link rel="stylesheet" href="css/app.css">
     </head>
     <body>
 
@@ -15,6 +15,6 @@
             </div>
         </div>
 
-        <script src="dist/bundle.js"></script>
+        <script src="js/app.js"></script>
     </body>
 </html>
