--- a/development/index.html
+++ b/development/index.html
@@ -2,18 +2,18 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Demo</title>
+        <title>Bài test VNG</title>
         <link rel="stylesheet" href="css/app.css">
     </head>
     <body>
 
-        <div class="uk-container">
-            <div class="uk-card uk-card-body uk-card-primary">
-                <h3 class="uk-card-title">Example headline</h3>
+        <nav class="uk-navbar-container" uk-navbar>
+            <div class="uk-navbar-left">...</div>
+            <div class="uk-navbar-center">...</div>
+            <div class="uk-navbar-right">...</div>
+        </nav>
 
-                <button class="uk-button uk-button-default" uk-tooltip="title: Hello World">Hover</button>
-            </div>
-        </div>
+        <a href="#">abvccc</a>
 
         <script src="js/app.js"></script>
     </body>
